# tuto.tk.run

./: .env  Cargo.toml  README.md  bun.lockb  flake.nix  justfile  package.json  packages-files.toml  taplo.toml  wini.toml
macros/src/macros/wini/: layout.rs
macros/src/utils/wini/: files.rs
public/: helpers.js
src/: lib.rs  main.rs  server.rs
src/components/notfound/: mod.rs  style.scss
src/layout/lua/: mod.rs
src/layouts/: mod.rs
src/layouts/lua/: mod.rs
src/middlewares/: datastar.rs  mod.rs
src/pages/: mod.rs
src/pages/home/: mod.rs  style.scss
src/pages/lua/: generate.sh  introduction.md  main.ts  mod.rs  run-lua.ts  runner.scss  runner.ts  sidebar.scss  structure.ron  style.scss  toggle.ts
src/pages/lua/editor/: editor.scss  editor.ts  mod.rs
src/pages/lua/en/: introduction.md
src/pages/lua/en/first/: introduction-guess.md  read.md  second-line.md
src/pages/lua/es/: introduction.md
src/pages/lua/es/first/: checking-the-number.md  end.md  first-line.md  introduction-guess.md  print-line.md  read.md  (+2 more)
src/pages/lua/first/: checking-the-number.md  end.md  first-line.md  introduction-guess.md  print-line.md  read.md  repeat-until.md  second-line.md
src/pages/lua/fr/: introduction.md
src/pages/lua/ide/: mod.rs  script.ts  style.scss
src/pages/lua/pt/: introduction.md
src/shared/: mod.rs
src/shared/wini/: cache.rs  dependencies.rs  env.rs
src/template/: always_loaded.scss  html.rs  mod.rs
src/utils/: language.rs  mod.rs  style_code.rs  tree.rs
src/utils/wini/: path.rs
tests/wini/: canonicalize_relative_path.rs
(+16 files in other folders)
