# <https://doc.rust-lang.org/cargo/index.html>
[package]
    edition = "2021"
    name = "programming_tutorial"
    version = "0.1.0"

[features]
    random-lang = []



[build-dependencies]
    walkdir = "2.5.0"

[dependencies]
    axum = { version = "0.8", features = ["macros"] }
    colog = "1.3"
    ctor = "0.3"
    datastar = { version = "0.3.1", features = ["axum"] }
    dotenvy = "0.15"
    http-body-util = "0.1"
    hyper = "1"
    itertools = "0.14"
    log = "0.4"
    pulldown-cmark = "0.12"
    regex = "1"
    ron = "0.12.2"
    serde = { version = "1", features = ["derive"] }
    serde_json = "1.0"
    strum = { version = "0.27", features = ["derive"] }
    strum_macros = "0.27"
    syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
    tl = "0.7.8"
    tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
    toml = "0.8"
    tower-http = { version = "0.6", features = ["compression-br", "compression-gzip", "fs"] }
    walkdir = "2.5"
    wini-macros = { path = "./macros/" }
    wini-maud = { version = "0.26.5", features = ["axum"] }

    [package.metadata.cargo-machete]
        ignored = [
            # Used with the procedural macro #[cache]
            "itertools",
            "wini-maud",
            # Used with the procedural macro #[cache]
            "ctor",
        ]
